# qup

./: AGENT.md  Cargo.toml  PROTOCOL.md  README.md  clippy.toml  rust-toolchain.toml
assets/: logo.afdesign
crates/qup/: Cargo.toml
crates/qup-core/: Cargo.toml
crates/qup-core/src/: lib.rs
crates/qup-core/src/io/: asynch.rs  mod.rs  sync.rs
crates/qup-core/src/parser/: checksum.rs  frame.rs  mod.rs
crates/qup-core/src/types/: caps.rs  cursor.rs  error.rs  frame.rs  message.rs  mod.rs  opcode.rs  scalar.rs  value.rs
crates/qup-core/tests/: io_conformance.rs  spec_conformance.rs
crates/qup-embassy/: Cargo.toml
crates/qup-embassy-proc/: Cargo.toml
crates/qup-embassy-proc/src/: lib.rs
crates/qup-embassy/src/: lib.rs
crates/qup-redis-bridge/: Cargo.toml
crates/qup-redis-bridge/src/: main.rs
crates/qup-test-cli/: Cargo.toml
crates/qup-test-cli/src/: main.rs
crates/qup-test-node/: Cargo.toml
crates/qup-test-node/src/: main.rs
crates/qup-test-tui/: Cargo.toml
crates/qup-test-tui/src/: app.rs  main.rs  network.rs  ui.rs
crates/qup-tui/: Cargo.toml
crates/qup-tui/src/: main.rs
crates/qup/src/: client.rs  lib.rs
