[package]
name = "qup-embassy-proc"
description = "Proc macros for qup-embassy."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }