[package]
name = "qup-embassy"
description = "Embassy integration for QUP."
readme = "../../README.md"
keywords = ["protocol", "embedded", "embassy", "async"]
categories = ["embedded", "asynchronous", "encoding"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
macros = ["dep:qup-embassy-proc"]
defmt = ["dep:defmt", "qup-core/defmt"]

[dependencies]
qup-core.workspace = true
embassy-sync.workspace = true
embassy-futures = "0.1.2"
heapless = "0.9.2"
qup-embassy-proc = { path = "../qup-embassy-proc", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }