[package]
name = "qup"
description = "Host-side implementations and utilities for QUP."
readme = "../../README.md"
keywords = ["protocol", "binary", "embedded", "host"]
categories = ["embedded", "encoding", "network-programming"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
qup-core.workspace = true
tokio = { version = "1", features = ["io-util", "net", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "time"] }